# calssification_test_task

./: .gitignore  Makefile  README.md  make_dataset.py  pyproject.toml
allennlp/: Dockerfile  predict.py
allennlp/config/: allennlp_config.jsonnet
allennlp/custom/: __init__.py  base_classifier_fbeta.py
bert_classification/: Dockerfile  predict.py  requirements.txt  train.py
bert_classification/config/: model_config.json
bert_classification/model/: bert_for_classification.py  classification_dataset.py  focal_loss.py  predictor.py  trainer.py  utils.py
fasttext/: predict.py  train.py
