[tool.poetry]
name = "junior_no_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.1"
fasttext = "^0.9.2"
loguru = "^0.5.3"
pandas = "^1.2.3"
allennlp = "0.9.0"
catalyst = "^21.3.2"
transformers = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
